feat: Add Weaviate Docker Compose setup and initial notebooks for Llama-3 fine-tuning and RAG.

--- a/notebooks/03_rag_librarian.ipynb
+++ b/notebooks/03_rag_librarian.ipynb
@@ -28,7 +28,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 10,
             "metadata": {
                 "id": "install_deps"
             },
@@ -40,7 +40,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 11,
             "metadata": {
                 "id": "imports"
             },
@@ -49,8 +49,6 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "WARNING:tensorflow:From c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-                        "\n",
                         "Libraries loaded.\n"
                     ]
                 }
@@ -80,7 +78,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 12,
             "metadata": {
                 "id": "path_config"
             },
@@ -146,7 +144,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 14,
             "metadata": {
                 "id": "weaviate_client"
             },
@@ -155,48 +153,30 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Attempting to start Weaviate Embedded...\n",
-                        "Weaviate Embedded failed: Client.__init__() got an unexpected keyword argument 'embedded_options'\n",
-                        "Attempting to connect to external instance (WCD/Docker)...\n"
+                        "Attempting to connect to Weaviate (v4)...\n",
+                        "Trying Embedded...\n",
+                        "Embedded failed (or not supported in this env): Windows is not supported with EmbeddedDB. Please upvote this feature request if you want\n",
+                        "                 this: https://github.com/weaviate/weaviate/issues/3315\n",
+                        "Attempting to connect to external instance...\n",
+                        "Connected to Weaviate at http://localhost:8080\n",
+                        "Client Ready.\n"
                     ]
                 },
                 {
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "C:\\Users\\Sahas Induwara\\AppData\\Local\\Temp\\ipykernel_8160\\409100212.py:8: DeprecationWarning: \n",
-                        "Python client v3 `weaviate.Client(...)` has been removed.\n",
-                        "\n",
-                        "Upgrade your code to use Python client v4 `weaviate.WeaviateClient` connections and methods.\n",
-                        "    - For Python Client v4 usage, see: https://weaviate.io/developers/weaviate/client-libraries/python\n",
-                        "    - For code migration, see: https://weaviate.io/developers/weaviate/client-libraries/python/v3_v4_migration\n",
-                        "\n",
-                        "If you have to use v3 code, install the v3 client and pin the v3 dependency in your requirements file: `weaviate-client>=3.26.7;<4.0.0`\n",
-                        "  client = weaviate.Client(\n",
-                        "C:\\Users\\Sahas Induwara\\AppData\\Local\\Temp\\ipykernel_8160\\409100212.py:23: DeprecationWarning: \n",
-                        "Python client v3 `weaviate.Client(...)` has been removed.\n",
-                        "\n",
-                        "Upgrade your code to use Python client v4 `weaviate.WeaviateClient` connections and methods.\n",
-                        "    - For Python Client v4 usage, see: https://weaviate.io/developers/weaviate/client-libraries/python\n",
-                        "    - For code migration, see: https://weaviate.io/developers/weaviate/client-libraries/python/v3_v4_migration\n",
-                        "\n",
-                        "If you have to use v3 code, install the v3 client and pin the v3 dependency in your requirements file: `weaviate-client>=3.26.7;<4.0.0`\n",
-                        "  client = weaviate.Client(\n"
+                        "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\weaviate\\warnings.py:196: DeprecationWarning: Dep024: You are using the `vectorizer_config` argument in `collection.config.create()`, which is deprecated.\n",
+                        "            Use the `vector_config` argument instead.\n",
+                        "            \n",
+                        "  warnings.warn(\n"
                     ]
                 },
                 {
-                    "ename": "TypeError",
-                    "evalue": "Client.__init__() got an unexpected keyword argument 'url'",
-                    "output_type": "error",
-                    "traceback": [
-                        "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-                        "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-                        "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAttempting to start Weaviate Embedded...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m client = \u001b[43mweaviate\u001b[49m\u001b[43m.\u001b[49m\u001b[43mClient\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43membedded_options\u001b[49m\u001b[43m=\u001b[49m\u001b[43mEmbeddedOptions\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     10\u001b[39m \u001b[43m    \u001b[49m\u001b[43madditional_headers\u001b[49m\u001b[43m=\u001b[49m\u001b[43m{\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mX-HuggingFace-Api-Key\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetenv\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mHF_TOKEN\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;66;43;03m# Optional if using HF Inference\u001b[39;49;00m\n\u001b[32m     12\u001b[39m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mWeaviate Embedded Started!\u001b[39m\u001b[33m\"\u001b[39m)\n",
-                        "\u001b[31mTypeError\u001b[39m: Client.__init__() got an unexpected keyword argument 'embedded_options'",
-                        "\nDuring handling of the above exception, another exception occurred:\n",
-                        "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-                        "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     20\u001b[39m     wcd_url = os.getenv(\u001b[33m\"\u001b[39m\u001b[33mWEAVIATE_URL\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mhttp://localhost:8080\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     21\u001b[39m     wcd_api_key = os.getenv(\u001b[33m\"\u001b[39m\u001b[33mWEAVIATE_API_KEY\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m     client = \u001b[43mweaviate\u001b[49m\u001b[43m.\u001b[49m\u001b[43mClient\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[43m        \u001b[49m\u001b[43murl\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwcd_url\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     25\u001b[39m \u001b[43m        \u001b[49m\u001b[43mauth_client_secret\u001b[49m\u001b[43m=\u001b[49m\u001b[43mweaviate\u001b[49m\u001b[43m.\u001b[49m\u001b[43mAuthApiKey\u001b[49m\u001b[43m(\u001b[49m\u001b[43mapi_key\u001b[49m\u001b[43m=\u001b[49m\u001b[43mwcd_api_key\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mwcd_api_key\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01melse\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\n\u001b[32m     26\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     27\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mConnected to External Weaviate at \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mwcd_url\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Define Schema\u001b[39;00m\n",
-                        "\u001b[31mTypeError\u001b[39m: Client.__init__() got an unexpected keyword argument 'url'"
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Schema 'FinancialReport' created/reset.\n"
                     ]
                 }
             ],
@@ -286,11 +266,31 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 15,
             "metadata": {
                 "id": "ingest_data"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "C:\\Users\\Sahas Induwara\\AppData\\Local\\Temp\\ipykernel_9772\\2064334838.py:3: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the `langchain-huggingface package and should be used instead. To use it run `pip install -U `langchain-huggingface` and import as `from `langchain_huggingface import HuggingFaceEmbeddings``.\n",
+                        "  embeddings = HuggingFaceEmbeddings(model_name=embedding_model_name)\n",
+                        "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+                        "  warnings.warn(\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Loaded Embeddings: all-MiniLM-L6-v2\n",
+                        "Loading 654 chunks to Weaviate (Collection: FinancialReport)...\n",
+                        "Ingestion Complete. Total Objects: 0\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Load Embeddings Model (Local)\n",
                 "embedding_model_name = \"all-MiniLM-L6-v2\"\n",
@@ -337,7 +337,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 16,
             "metadata": {
                 "id": "hybrid_search_func"
             },
@@ -383,11 +383,19 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 17,
             "metadata": {
                 "id": "reranker_setup"
             },
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Loaded Reranker: cross-encoder/ms-marco-MiniLM-L-6-v2\n"
+                    ]
+                }
+            ],
             "source": [
                 "# Load Cross-Encoder (Reranker)\n",
                 "rerank_model_name = \"cross-encoder/ms-marco-MiniLM-L-6-v2\"\n",
@@ -437,15 +445,13 @@
             },
             "outputs": [],
             "source": [
-                "# Setup LLM (You can use the Fine-tuned one if loaded, or a lightweight one)\n",
-                "# For this notebook, let's assume we use a HF Pipeline or similar if not reusing Part 2's model directly.\n",
-                "# Ideally, you integrate Part 2's `query_intern` model here, or instantiate a fresh one.\n",
+                "# Setup LLM (Can use the Fine-tuned one if loaded, or a lightweight one)\n",
                 "\n",
                 "from transformers import pipeline, AutoTokenizer, AutoModelForCausalLM\n",
                 "import torch\n",
                 "\n",
                 "# Load Model (Optional: Reuse Part 2 logic/paths if unified)\n",
-                "model_id = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
+                "model_id = \"unsloth/Meta-Llama-3.1-8B-Instruct\"\n",
                 "try:\n",
                 "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
                 "    model = AutoModelForCausalLM.from_pretrained(\n",
