fix: cost tracker error

--- a/notebooks/02_finetuning_intern.ipynb
+++ b/notebooks/02_finetuning_intern.ipynb
@@ -443,13 +443,15 @@
    "source": [
     "import json\n",
     "import os\n",
+    "from datasets import load_dataset\n",
     "\n",
     "# Use the dynamic DATA_PATH configured earlier\n",
     "dataset_filename = \"train.jsonl\"\n",
     "possible_paths = [\n",
+    "    r\"c:/Development/financial-intelligence-engine/data/processed/train.jsonl\", # Absolute path (Highest Priority)\n",
     "    os.path.join(DATA_PATH, dataset_filename),  # Path from Config (Local/Drive)\n",
     "    \"train.jsonl\",                              # Copy in CWD\n",
-    "    \"../data/processed/train.jsonl\",                      # Relative fallback\n",
+    "    \"../data/processed/train.jsonl\",            # Relative fallback\n",
     "    \"/content/train.jsonl\"                      # Colab root\n",
     "]\n",
     "\n",
