--- a/notebooks/03_rag_librarian.ipynb
+++ b/notebooks/03_rag_librarian.ipynb
@@ -212,7 +212,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sahas Induwara\\AppData\\Local\\Temp\\ipykernel_4324\\2058290492.py:3: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the `langchain-huggingface package and should be used instead. To use it run `pip install -U `langchain-huggingface` and import as `from `langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "C:\\Users\\Sahas Induwara\\AppData\\Local\\Temp\\ipykernel_50984\\2058290492.py:3: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the `langchain-huggingface package and should be used instead. To use it run `pip install -U `langchain-huggingface` and import as `from `langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embeddings = HuggingFaceEmbeddings(model_name=embedding_model_name)\n",
       "c:\\Users\\Sahas Induwara\\.conda\\envs\\sahas\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
       "  warnings.warn(\n"
@@ -438,19 +438,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running Evaluation on 5 questions (preview)...\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'page_content'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 27\u001b[39m\n\u001b[32m     24\u001b[39m     latency = time.time() - start\n\u001b[32m     26\u001b[39m     \u001b[38;5;66;03m# Calculate Cost\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m     cost = \u001b[43mget_accurate_cost\u001b[49m\u001b[43m(\u001b[49m\u001b[43msources\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgen_answer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m=\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mllm_model\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mgpt-4o-mini\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     29\u001b[39m     results.append({\n\u001b[32m     30\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mquestion\u001b[39m\u001b[33m\"\u001b[39m: q,\n\u001b[32m     31\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mgenerated\u001b[39m\u001b[33m\"\u001b[39m: gen_answer,\n\u001b[32m   (...)\u001b[39m\u001b[32m     34\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mcost\u001b[39m\u001b[33m\"\u001b[39m: cost\n\u001b[32m     35\u001b[39m     })\n\u001b[32m     38\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mEvaluation Complete.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Development\\financial-intelligence-engine\\src\\utils\\cost_tracker.py:41\u001b[39m, in \u001b[36mget_accurate_cost\u001b[39m\u001b[34m(sources, query, answer, prompt_template, model_name)\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m sources:\n\u001b[32m     39\u001b[39m     \u001b[38;5;66;03m# Handle both dict and object formats\u001b[39;00m\n\u001b[32m     40\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(s, \u001b[38;5;28mdict\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m41\u001b[39m         content = \u001b[43ms\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mdoc\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpage_content\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(s.get(\u001b[33m'\u001b[39m\u001b[33mdoc\u001b[39m\u001b[33m'\u001b[39m), \u001b[38;5;28mobject\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m s.get(\u001b[33m'\u001b[39m\u001b[33mpage_content\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     42\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     43\u001b[39m         content = s.page_content \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(s, \u001b[33m'\u001b[39m\u001b[33mpage_content\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(s)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'dict' object has no attribute 'page_content'"
+      "Running Evaluation on 5 questions (preview)...\n",
+      "Evaluation Complete.\n",
+      "{\n",
+      "  \"question\": \"How does the tone of the text reflect the company's outlook on growth and expenses?\",\n",
+      "  \"generated\": \"The tone of the text reflects a cautious and uncertain outlook on growth and expenses. The company acknowledges various risks and factors that could impact their operating results, such as seasonality, competition, and technological changes, and expresses concerns about their ability to accurately forecast their results and adjust to changes in revenue. The repeated mention of potential losses, inability to maintain profitability, and adverse effects on financial results and future prospects also convey a sense of caution and uncertainty. Overall, the tone suggests that the company is aware of the challenges and risks associated with growth and is managing expectations accordingly.\",\n",
+      "  \"actual\": \"The tone of the text reflects a positive outlook on growth, indicating that general and administrative expenses are expected to increase in absolute terms due to business growth and increased trip volume. However, it also conveys optimism regarding efficiency improvements, suggesting that these expenses will decrease as a percentage of revenue over time. This dual perspective highlights a focus on both growth and operational efficiency.\",\n",
+      "  \"latency\": 1.5169050693511963,\n",
+      "  \"cost\": 7.4e-05\n",
+      "}\n"
      ]
     }
    ],
@@ -498,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "12e7bc12",
    "metadata": {},
    "outputs": [
