--- a/notebooks/03_rag_librarian.ipynb
+++ b/notebooks/03_rag_librarian.ipynb
@@ -520,7 +520,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sahas",
    "language": "python",
    "name": "python3"
   },
@@ -534,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
